--- a/docker-scripts/demoapp.conf
+++ b/docker-scripts/demoapp.conf
@@ -5,8 +5,10 @@ input {
 }
 
 filter {
-    json {
-      source => "message"
+    if [fields][format] == "json" {
+        json {
+          source => "message"
+        }
     }
 }
 
