--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=Test
 spring.main.banner-mode=OFF
 logging.level.=INFO
 logging.level.org.springframework=WARN
+server.port=8080
