--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Test
+spring.application.name=test
 spring.main.banner-mode=OFF
 logging.level.=INFO
 logging.level.org.springframework=WARN
